Update auth
